--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,8 @@
         "symfony/yaml": "6.2.*"
     },
     "require-dev": {
+        "phpstan/phpstan": "^1.9",
+        "phpunit/phpunit": "^9.5",
         "symfony/phpunit-bridge": "^6.2"
     },
     "config": {
