Add Tasks (with Doctrine ORM and Docker Compose)

--- a/.env
+++ b/.env
@@ -4,3 +4,7 @@ FAKESTOREAPI_BASEURL=https://fakestoreapi.com
 APP_ENV=dev
 APP_SECRET=31ed58411088c748192004323ed9f7ba
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+DATABASE_URL="mysql://user:password@127.0.0.1:3306/dbname"
+###< doctrine/doctrine-bundle ###
